--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         </div>
        </section>
  
-       <!-- contant section -->
+       <!-- contact section -->
        <section id="contact">
         <h2 class="contact-title"> Contact Us</h2>
         <div class="contact-container container">
